fixed hover jumping

--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -52,7 +52,7 @@
     &:hover {
       color: $button-color;
       background-color: $button-text-color;
-      border: 1px solid $button-color;
+      outline: 1px solid $button-color;
     }
   }
 
